--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,41 @@
-.grid-wrapper {
-	background: red;
+
+.container-class {
+    background-image: url("../images/Fence_flowers.jpg");
+    background-repeat: no-repeat;
+	background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 400px;
+    border: 2px dashed #333;
 	font-family: Langar;
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
 	grid-gap: 10px;
 }
+.grid-container {
+	background-image: url("../images/Heaven.jpg");
+    background-repeat: no-repeat;
+	background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 400px;
+    border: 2px dashed #333;
+	font-family: Langar;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	grid-gap: 10px;
+	}
+.wrapper-class {
+	background-image: url("../images/palm_with_skyline.jpg");
+    background-repeat: no-repeat;
+	background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 400px;
+    border: 2px dashed #333;
+	font-family: Langar;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	grid-gap: 10px;
+}	
+	
